@@ -1,3 +1,8 @@
+2008-08-13  Matthias Clasen  <mclasen@redhat.com>
+
+	* ginputstream.c:
+	* goutputstream.c: Add intro docs.
+
 2008-08-13  Tor Lillqvist  <tml@novell.com>
 
 	* win32/gwinhttpfileoutputstream.c
